--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -p tsconfig.build.json && vite build",
     "lint": "biome check --apply-unsafe --no-errors-on-unmatched --files-ignore-unknown=true  ./",
+    "ts": "tsc -p tsconfig.build.json",
     "preview": "vite preview",
     "generate-client": "openapi-ts"
   },
