--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "biome check --apply-unsafe --no-errors-on-unmatched --files-ignore-unknown=true  ./",
     "ts": "tsc -p tsconfig.build.json",
     "preview": "vite preview",
-    "generate-client": "openapi-ts"
+    "generate-client": "openapi-ts",
+    "test-e2e": "playwright test"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
