chore: add command to run playwright tests in docker-compose

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -126,6 +126,7 @@ services:
       - ./frontend/test-results:/app/test-results
     ports:
       - 9323:9323
+    command: npx playwright test
 
 networks:
   traefik-public:
