feat: implement observability stack with Prometheus, Grafana, Loki, and Tempo

--- a/.env
+++ b/.env
@@ -44,3 +44,11 @@ SENTRY_DSN=
 DOCKER_IMAGE_BACKEND=backend
 DOCKER_IMAGE_FRONTEND=frontend
 CI=true
+
+# Observability Settings
+ENABLE_METRICS=true
+METRICS_PORT=8000
+OTLP_ENDPOINT=http://tempo:4317
+SERVICE_NAME=fastapi-app
+LOKI_HOST=http://loki:3100
+GRAFANA_ADMIN_PASSWORD=admin  # Change this in production
