--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,11 +20,11 @@ dependencies = [
     "bcrypt==4.0.1",
     "pydantic-settings<3.0.0,>=2.2.1",
     "pyjwt<3.0.0,>=2.8.0",
-    "opentelemetry-api>=1.14.0",
-    "opentelemetry-sdk>=1.14.0",
-    "opentelemetry-instrumentation-fastapi>=1.14.0",
-    "opentelemetry-exporter-otlp>=1.14.0",
-    "prometheus-client>=0.16.0",
+    "opentelemetry-api",
+    "opentelemetry-sdk",
+    "opentelemetry-instrumentation-fastapi",
+    "opentelemetry-exporter-otlp",
+    "prometheus-client",
 ]
 
 [tool.uv]
