--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
 
   db:
-    image: postgres:12
+    image: postgres:15
     restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
@@ -9,6 +9,8 @@ services:
       retries: 5
       start_period: 30s
       timeout: 10s
+    ports:
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - app-db-data:/var/lib/postgresql/data/pgdata
     env_file:
