fix: update observability configuration for backend service and improve docker-compose settings

--- a/.env
+++ b/.env
@@ -48,7 +48,9 @@ CI=true
 # Observability Settings
 ENABLE_METRICS=true
 METRICS_PORT=8000
-OTLP_ENDPOINT=http://tempo:4317
+OTLP_ENDPOINT=http://tempo:4317 # inside docker-compose
+# OTLP_ENDPOINT=http://localhost:4317 # local
 SERVICE_NAME=fastapi-app
-LOKI_HOST=http://loki:3100
+LOKI_HOST=http://loki:3100 # inside docker-compose
+# LOKI_HOST=http://localhost:3100 # local
 GRAFANA_ADMIN_PASSWORD=admin  # Change this in production
