--- a/infra/prometheus/prometheus.yml
+++ b/infra/prometheus/prometheus.yml
@@ -28,10 +28,9 @@ scrape_configs:
       - targets: ["localhost:9090"]
 
   - job_name: 'backend'
-
-    # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
-
-    metrics_path: '/api/v1/metrics'
+    scrape_interval: 10s
+    scrape_timeout: 5s
+    metrics_path: '/metrics'
     static_configs:
       - targets: ['backend:8000']
+    honor_labels: true
